lots of UI updates and wiring up the inputs
